[package]
name = "frottage-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.35.0", features = ["bundled"] }
anyhow = "1.0.98"
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
